--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: catalog-service
-          image: catalog-service
+          image: ghcr.io/skypwk/catalog-service:latest
           imagePullPolicy: IfNotPresent
           lifecycle:
             preStop:
